my_environments/django/django_fundamentals/single_model_orm/single_model_orm.txt
Microsoft Windows [Version 10.0.22631.3296]
(c) Microsoft Corporation. All rights reserved.

C:\Users\balqi\Documents\MyAxsos\Python_stack\my_environments\django\django_fundamentals>call envo2024\Scripts\activate

(envo2024) C:\Users\balqi\Documents\MyAxsos\Python_stack\my_environments\django\django_fundamentals>admin-django startproject single_model_orm
'admin-django' is not recognized as an internal or external command,
operable program or batch file.

(envo2024) C:\Users\balqi\Documents\MyAxsos\Python_stack\my_environments\django\django_fundamentals>django-admin startproject single_model_orm

(envo2024) C:\Users\balqi\Documents\MyAxsos\Python_stack\my_environments\django\django_fundamentals>cd single-model-orm
The system cannot find the path specified.

(envo2024) C:\Users\balqi\Documents\MyAxsos\Python_stack\my_environments\django\django_fundamentals>cd single_model_orm

(envo2024) C:\Users\balqi\Documents\MyAxsos\Python_stack\my_environments\django\django_fundamentals\single_model_orm> py manage.py runserver
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).

You have 18 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.
Run 'python manage.py migrate' to apply them.
March 25, 2024 - 19:35:07
Django version 5.0.3, using settings 'single_model_orm.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.


(envo2024) C:\Users\balqi\Documents\MyAxsos\Python_stack\my_environments\django\django_fundamentals\single_model_orm>python manage.py startapp a
pp

(envo2024) C:\Users\balqi\Documents\MyAxsos\Python_stack\my_environments\django\django_fundamentals\single_model_orm> py manage.py runserver
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).

You have 18 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.
Run 'python manage.py migrate' to apply them.
March 25, 2024 - 19:41:11
Django version 5.0.3, using settings 'single_model_orm.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.

[25/Mar/2024 19:41:14] "GET / HTTP/1.1" 200 207
Not Found: /favicon.ico
[25/Mar/2024 19:41:14] "GET /favicon.ico HTTP/1.1" 404 2161

(envo2024) C:\Users\balqi\Documents\MyAxsos\Python_stack\my_environments\django\django_fundamentals\single_model_orm>dja
ngo shell
'django' is not recognized as an internal or external command,
operable program or batch file.

(envo2024) C:\Users\balqi\Documents\MyAxsos\Python_stack\my_environments\django\django_fundamentals\single_model_orm>python manage.py shell
Python 3.12.2 (tags/v3.12.2:6abddd9, Feb  6 2024, 21:26:36) [MSC v.1937 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> >>> from app.models import *
  File "<console>", line 1
    >>> from app.models import *
    ^^
SyntaxError: invalid syntax
>>>
KeyboardInterrupt
>>> exit()

(envo2024) C:\Users\balqi\Documents\MyAxsos\Python_stack\my_environments\django\django_fundamentals\single_model_orm>py
manage.py makemigration
Unknown command: 'makemigration'. Did you mean makemigrations?
Type 'manage.py help' for usage.

(envo2024) C:\Users\balqi\Documents\MyAxsos\Python_stack\my_environments\django\django_fundamentals\single_model_orm>pymanage.py makemigrations
Migrations for 'app':
  app\migrations\0001_initial.py
    - Create model users

(envo2024) C:\Users\balqi\Documents\MyAxsos\Python_stack\my_environments\django\django_fundamentals\single_model_orm>pymanage.py migrate
Operations to perform:
  Apply all migrations: admin, app, auth, contenttypes, sessions
Running migrations:
  Applying contenttypes.0001_initial... OK
  Applying auth.0001_initial... OK
  Applying admin.0001_initial... OK
  Applying admin.0002_logentry_remove_auto_add... OK
  Applying admin.0003_logentry_add_action_flag_choices... OK
  Applying app.0001_initial... OK
  Applying contenttypes.0002_remove_content_type_name... OK
  Applying auth.0002_alter_permission_name_max_length... OK
  Applying auth.0003_alter_user_email_max_length... OK
  Applying auth.0004_alter_user_username_opts... OK
  Applying auth.0005_alter_user_last_login_null... OK
  Applying auth.0006_require_contenttypes_0002... OK
  Applying auth.0007_alter_validators_add_error_messages... OK
  Applying auth.0008_alter_user_username_max_length... OK
  Applying auth.0009_alter_user_last_name_max_length... OK
  Applying auth.0010_alter_group_name_max_length... OK
  Applying auth.0011_update_proxy_permissions... OK
  Applying auth.0012_alter_user_first_name_max_length... OK
  Applying sessions.0001_initial... OK

(envo2024) C:\Users\balqi\Documents\MyAxsos\Python_stack\my_environments\django\django_fundamentals\single_model_orm>models.CharField(max_length=45)models.CharField(max_length=45)models.CharField(max_length=45)models.CharField(max_length=45)
